fix : the profile picture in the userinformation form is not appearing stretched

--- a/public/User.css
+++ b/public/User.css
@@ -24,7 +24,7 @@
     z-index: 5;
     backdrop-filter: blur(8px); 
     -webkit-backdrop-filter: blur(10px);
- }
+ }  
 
 
 
@@ -89,8 +89,10 @@
 .upload img{
     border:#F2E8CF solid 4px;
     border-radius: 50%;
+    object-fit: contain;
     width: 80px;
     height: 80px;
+    object-fit: cover;
 }
 .upload .round{
 position: absolute;
